--- a/docs/main.tex
+++ b/docs/main.tex
@@ -24,9 +24,9 @@
 \title{Analysis of Steady-State Behavior in Server Queues using Markov Chains and Eigenvalues in the M/M/1 Model\\}
 
 \author{\IEEEauthorblockN{Nicholas Wise Saragih Sumbayak - 13524037}
-\IEEEauthorblockA{\textit{School of Electrical Engineering and Informatics} \\
-\textit{Institut Teknologi Bandung}\\
-Jl. Ganesha 10 Bandung 40132, Indonesia \\
+\IEEEauthorblockA{\textit{Department of Informatics Engineering} \\
+\textit{School of Electrical Engineering and Informatics}\\
+Institut Teknologi Bandung, Jl. Ganesha 10 Bandung 40132, Indonesia \\
 \href{mailto:nicholasaragih@gmail.com}{nicholasaragih@gmail.com} | \href{mailto:13524037@std.stei.itb.ac.id}{13524037@std.stei.itb.ac.id}}
 }
 
@@ -231,134 +231,89 @@ This corresponds to an eigenvector associated with the eigenvalue $\lambda = 1$.
 \label{fig:markov}
 \end{figure}
 
+\section{Methodology}
 
-\subsection{Equations}
-Number equations consecutively. To make your 
-equations more compact, you may use the solidus (~/~), the exp function, or 
-appropriate exponents. Italicize Roman symbols for quantities and variables, 
-but not Greek symbols. Use a long dash rather than a hyphen for a minus 
-sign. Punctuate equations with commas or periods when they are part of a 
-sentence, as in:
-\begin{equation}
-a+b=\gamma\label{eq}
-\end{equation}
+\subsection{The M/M/1 Queue Model}
 
-Be sure that the 
-symbols in your equation have been defined before or immediately following 
-the equation. Use ``\eqref{eq}'', not ``Eq.~\eqref{eq}'' or ``equation \eqref{eq}'', except at 
-the beginning of a sentence: ``Equation \eqref{eq} is . . .''
+The $M/M/1$ queue is one of the simplest stochastic models used to represent
+server-based systems. The notation $M/M/1$ indicates that arrivals follow a
+(Markovian) Poisson process ($M$), service times are exponentially
+distributed ($M$), and the system consists of a single server ($1$).
 
-\subsection{\LaTeX-Specific Advice}
+Let $\lambda$ denote the average arrival rate and $\mu$ the average service
+rate. At any time, the state of the system is defined as the number of jobs
+currently present in the system, including the job being served. Thus, the
+system is considered stable if $\lambda < \mu$ and if otherwise, the queue 
+will grow indefintely long over time.
 
-Please use ``soft'' (e.g., \verb|\eqref{Eq}|) cross references instead
-of ``hard'' references (e.g., \verb|(1)|). That will make it possible
-to combine sections, add equations, or change the order of figures or
-citations without having to go through the file line by line.
-
-Please don't use the \verb|{eqnarray}| equation environment. Use
-\verb|{align}| or \verb|{IEEEeqnarray}| instead. The \verb|{eqnarray}|
-environment leaves unsightly spaces around relation symbols.
-
-Please note that the \verb|{subequations}| env ironment in {\LaTeX}
-will increment the main equation counter even when there are no
-equation numbers displayed. If you forget that, you might write an
-article in which the equation numbers skip from (17) to (20), causing
-the copy editors to wonder if you've discovered a new method of
-counting.
-
-{\BibTeX} does not work by magic. It doesn't get the bibliographic
-data from thin air but from .bib files. If you use {\BibTeX} to produce a
-bibliography you must send the .bib files. 
-
-{\LaTeX} can't read your mind. If you assign the same label to a
-subsubsection and a table, you might find that Table I has been cross
-referenced as Table IV-B3. 
-
-{\LaTeX} does not have precognitive abilities. If you put a
-\verb|\label| command before the command that updates the counter it's
-supposed to be using, the label will pick up the last counter to be
-cross referenced instead. In particular, a \verb|\label| command
-should not go before the caption of a figure or a table.
-
-Do not use \verb|\nonumber| inside the \verb|{array}| environment. It
-will not stop equation numbers inside \verb|{array}| (there won't be
-any anyway) and it might stop a wanted equation number in the
-surrounding equation.
-
-\subsection{Some Common Mistakes}\label{SCM}
-\begin{itemize}
-\item The word ``data'' is plural, not singular.
-\item The subscript for the permeability of vacuum $\mu_{0}$, and other common scientific constants, is zero with subscript formatting, not a lowercase letter ``o''.
-\item In American English, commas, semicolons, periods, question and exclamation marks are located within quotation marks only when a complete thought or name is cited, such as a title or full quotation. When quotation marks are used, instead of a bold or italic typeface, to highlight a word or phrase, punctuation should appear outside of the quotation marks. A parenthetical phrase or statement at the end of a sentence is punctuated outside of the closing parenthesis (like this). (A parenthetical sentence is punctuated within the parentheses.)
-\item A graph within a graph is an ``inset'', not an ``insert''. The word alternatively is preferred to the word ``alternately'' (unless you really mean something that alternates).
-\item Do not use the word ``essentially'' to mean ``approximately'' or ``effectively''.
-\item In your paper title, if the words ``that uses'' can accurately replace the word ``using'', capitalize the ``u''; if not, keep using lower-cased.
-\item Be aware of the different meanings of the homophones ``affect'' and ``effect'', ``complement'' and ``compliment'', ``discreet'' and ``discrete'', ``principal'' and ``principle''.
-\item Do not confuse ``imply'' and ``infer''.
-\item The prefix ``non'' is not a word; it should be joined to the word it modifies, usually without a hyphen.
-\item There is no period after the ``et'' in the Latin abbreviation ``et al.''.
-\item The abbreviation ``i.e.'' means ``that is'', and the abbreviation ``e.g.'' means ``for example''.
-\end{itemize}
-An excellent style manual for science writers is \cite{b7}.
-
-\subsection{Authors and Affiliations}\label{AAA}
-\textbf{The class file is designed for, but not limited to, six authors.} A 
-minimum of one author is required for all conference articles. Author names 
-should be listed starting from left to right and then moving down to the 
-next line. This is the author sequence that will be used in future citations 
-and by indexing services. Names should not be listed in columns nor group by 
-affiliation. Please keep your affiliations as succinct as possible (for 
-example, do not differentiate among departments of the same organization).
-
-\subsection{Identify the Headings}\label{ITH}
-Headings, or heads, are organizational devices that guide the reader through 
-your paper. There are two types: component heads and text heads.
-
-Component heads identify the different components of your paper and are not 
-topically subordinate to each other. Examples include Acknowledgments and 
-References and, for these, the correct style to use is ``Heading 5''. Use 
-``figure caption'' for your Figure captions, and ``table head'' for your 
-table title. Run-in heads, such as ``Abstract'', will require you to apply a 
-style (in this case, italic) in addition to the style provided by the drop 
-down menu to differentiate the head from the text.
-
-Text heads organize the topics on a relational, hierarchical basis. For 
-example, the paper title is the primary text head because all subsequent 
-material relates and elaborates on this one topic. If there are two or more 
-sub-topics, the next level head (uppercase Roman numerals) should be used 
-and, conversely, if there are not at least two sub-topics, then no subheads 
-should be introduced.
-
-\subsection{Figures and Tables}\label{FAT}
-\paragraph{Positioning Figures and Tables} Place figures and tables at the top and 
-bottom of columns. Avoid placing them in the middle of columns. Large 
-figures and tables may span across both columns. Figure captions should be 
-below the figures; table heads should appear above the tables. Insert 
-figures and tables after they are cited in the text. Use the abbreviation 
-``Fig.~\ref{fig}'', even at the beginning of a sentence.
-
-\begin{table}[htbp]
-\caption{Table Type Styles}
-\begin{center}
-\begin{tabular}{|c|c|c|c|}
-\hline
-\textbf{Table}&\multicolumn{3}{|c|}{\textbf{Table Column Head}} \\
-\cline{2-4} 
-\textbf{Head} & \textbf{\textit{Table column subhead}}& \textbf{\textit{Subhead}}& \textbf{\textit{Subhead}} \\
-\hline
-copy& More table copy$^{\mathrm{a}}$& &  \\
-\hline
-\multicolumn{4}{l}{$^{\mathrm{a}}$Sample of a Table footnote.}
-\end{tabular}
-\label{tab1}
-\end{center}
-\end{table}
+Expanding over such, the utilization of the queue's buffer can be written as
+$\rho = \frac{\lambda}{\mu}$ and for it to be stable, it must hold that
+$\rho < 1$. The steady-state probability of having $n$ jobs
+in the system is given by:
+\[P_n = (1 - \rho) \rho^n, \quad n = 0, 1, 2, \ldots\]  
+where $P_n$ represents the probability of having $n$ jobs in the system at
+steady state \cite{b2}.
 
 \begin{figure}[htbp]
-\centerline{\includegraphics{fig1.png}}
-\caption{Example of a figure caption.}
-\label{fig}
+\centerline{\includegraphics[width=\columnwidth]{Mm1_queue.png}}
+\caption{An M/M/1 queueing node \cite{b7}.}
+\label{fig:mm1}
 \end{figure}
+
+\subsection{Markov Chain Representation}
+Building on the Markov Chain framework introduced in the theoretical foundation,
+the M/M/1 queue can be modeled as a discrete-state system in which each state
+represents the number of jobs currently present in the system. Let state $n$
+denote the condition where $n \geq 0$ jobs are either waiting or being served.
+
+Transitions between states occur due to two possible events: the arrival of a
+new job or the completion of a service. An arrival causes the system to move
+from state $n$ to $n+1$, while a service completion causes a transition from
+state $n$ to $n-1$ when $n > 0$. These transitions form a birth--death process,
+a special class of Markov Chains commonly used to model queueing systems.
+
+To enable matrix-based analysis, the infinite state space is truncated to a
+finite number of states $\{0,1,\dots,N\}$. This results in a finite stochastic
+transition matrix $P$ whose structure directly reflects the arrival rate
+$\lambda$ and service rate $\mu$. The evolution of the queue state distribution
+can therefore be analyzed using the matrix formulation established earlier
+\cite{b4}.
+
+\begin{figure}[htbp]
+\centerline{\includegraphics[width=\columnwidth]{markov-queue.png}}
+\caption{A Markov Chain representation of a queue \cite{b9}.}
+\label{fig:markov-queue}
+\end{figure}
+
+
+
+\subsection{Steady-State Analysis via Eigenvalues and Eigenvectors}
+
+The primary objective of the Markov Chain representation is to determine the
+long-term behavior of the queue. In steady-state operation, the distribution
+of queue lengths no longer changes over time, indicating that the system has
+reached equilibrium.
+
+From a linear algebra perspective, a steady-state distribution is a probability
+vector $x$ that satisfies
+\[
+P x = x,
+\]
+meaning that $x$ is an eigenvector of the transition matrix $P$ corresponding
+to the eigenvalue $\lambda = 1$ \cite{b4}. Since $P$ is a stochastic matrix,
+the existence of such an eigenvalue is guaranteed.
+
+For the M/M/1 queue, the existence of a valid steady-state eigenvector depends
+on the relationship between the arrival rate $\lambda$ and the service rate
+$\mu$. When $\lambda < \mu$, the system is stable and the eigenvector associated
+with $\lambda = 1$ represents the long-term probabilities of observing each
+queue length. This provides a direct linear algebraic criterion for evaluating
+whether a server can sustain a given workload.
+
+\subsection{C++ Queue Simulation}
+
+
+\section{Results and Discussion}
 
 Figure Labels: Use 8 point Times New Roman for Figure labels. Use words 
 rather than symbols or abbreviations when writing Figure axis labels to 
@@ -409,7 +364,15 @@ citation first, followed by the original foreign-language citation \cite{b6}.
 
 \bibitem{b5} Munir, Rinaldi. "Nilai Eigen dan Vektor Eigen (Bagian 1)", School of Electrical Engineering and Informatics (STEI) ITB, 2025. [Online]. Available: \url{https://informatika.stei.itb.ac.id/~rinaldi.munir/AljabarGeometri/2025-2026/Algeo-19-Nilai-Eigen-dan-Vektor-Eigen-Bagian1-2025.pdf}
 
-\bibitem{b6} "Markov Chains in NLP," GeeksforGeeks. [Online]. Available: \url{https://www.geeksforgeeks.org/nlp/markov-chains-in-nlp/}. [Accessed: Dec. 16, 2025].
+\bibitem{b6} "Markov Chains in NLP," GeeksforGeeks. [Online]. Available: \url{https://www.geeksforgeeks.org/nlp/markov-chains-in-nlp/}. [Accessed: Dec. 15, 2025].
+
+\bibitem{b7} "M/M/1 queue," Wikipedia. [Online]. Available: \url{https://en.wikipedia.org/wiki/M/M/1_queue}. [Accessed: Dec. 16, 2025].
+
+\bibitem{b8} M. Harchol-Balter, \textit{Performance Modeling and Design of Computer Systems: Queueing Theory in Action}. Cambridge, U.K.: Cambridge Univ. Press, 2013.
+
+\bibitem{b9} G. Giambene, ``Markov chains and queuing theory,'' in \emph{Queuing Theory and Telecommunications},
+Textbooks in Telecommunication Engineering, Cham, Switzerland: Springer, 2021,
+doi: 10.1007/978-3-030-75973-5\_4.
 
 \end{thebibliography}
 
