docs: add acknowledgment

--- a/docs/main.tex
+++ b/docs/main.tex
@@ -339,33 +339,24 @@ with units. In the example, write ``Magnetization (A/m)'' or ``Magnetization
 quantities and units. For example, write ``Temperature (K)'', not
 ``Temperature/K''.
 
+\appendix{}
+The Author
+
 \section*{Acknowledgment}
+First and foremost, the author would like to express his profound gratitude
+to God Almighty for His blessings, strength, and guidance throughout
+the completion of this research paper.
 
-The preferred spelling of the word ``acknowledgment'' in America is without
-an ``e'' after the ``g''. Avoid the stilted expression ``one of us (R. B.
-G.) thanks $\ldots$''. Instead, try ``R. B. G. thanks$\ldots$''. Put sponsor
-acknowledgments in the unnumbered footnote on the first page.
+The author also wishes to convey his deepest appreciation to his dear family
+for their unwavering love, endless prayers, and constant encouragement,
+which serve as the primary motivation in his academic journey.
 
-\section*{References}
-
-Please number citations consecutively within brackets \cite{b1}. The
-sentence punctuation follows the bracket \cite{b2}. Refer simply to the reference
-number, as in \cite{b3}---do not use ``Ref. \cite{b3}'' or ``reference \cite{b3}'' except at
-the beginning of a sentence: ``Reference \cite{b3} was the first $\ldots$''
-
-Number footnotes separately in superscripts. Place the actual footnote at
-the bottom of the column in which it was cited. Do not put footnotes in the
-abstract or reference list. Use letters for table footnotes.
-
-Unless there are six authors or more give all authors' names; do not use
-``et al.''. Papers that have not been published, even if they have been
-submitted for publication, should be cited as ``unpublished'' \cite{b4}. Papers
-that have been accepted for publication should be cited as ``in press'' \cite{b5}.
-Capitalize only the first word in a paper title, except for proper nouns and
-element symbols.
-
-For papers published in translation journals, please give the English
-citation first, followed by the original foreign-language citation \cite{b6}.
+Furthermore, the author extends his gratitude to Dr. Rinaldi Munir
+and the teaching staff of the IF2123 Linear and Geometrical Algebra
+course at Institut Teknologi Bandung for their invaluable lessons and
+knowledge bestowed upon the author. Finally, thanks are due to the
+author's colleagues in the Informatics Engineering  department for
+their support and collaboration.
 
 \begin{thebibliography}{00}
 \bibitem{b1} M. Harchol-Balter, \textit{Performance Modeling and Design of Computer Systems: Queueing Theory in Action}. Cambridge, U.K.: Cambridge Univ. Press, 2013.
